[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "key-spyder"
desc  ="A Web-Crawler that detects keywords in webpages."
authors = [{ name = "ChemicalLuck", email = "j.tebbett@outlook.com" }]
readme = "README.md"
keywords = ["crawler", "bs4", "beautifulsoup4", "sitemap"]
url = "https://github.com/ChemicalLuck/key-spyder"
license = {text = "MIT"}
version = "1.4.3"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests",
    "requests_cache",
    "beautifulsoup4",
    "pandas",
    "lxml"
]

[project.scripts]
key-spyder = "key_spyder:command"